Fix elements overflow in shell module [build]
https://forum.virtualmin.com/t/webmin-command-shell-module-oddity-the-text-input-field-extends-past-screens-end/122741/9?u=ilia

--- a/gray-theme/unauthenticated/gray-theme.css
+++ b/gray-theme/unauthenticated/gray-theme.css
@@ -698,3 +698,15 @@ body > .mode > b[data-mode="server-manager"] > a > .ff-cloudmin {
 .ql-compose-container .ql-snow .ql-tooltip {
   z-index: 99;
 }
+
+/* Shell module tweaks */
+.shell pre {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.shell input[name="cmd"] {
+  max-width: 64.5vw;
+}
+.shell select[name="pcmd"] {
+  max-width: 65vw;
+}
